<resources>
    <string name="app_name">SCAN</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="scan">SCAN</string>

    <string name="annotate">Write activity log</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="write_something">Write your activity</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="apps">Apps</string>
    <string name="check_all">Check All</string>
    <string name="uncheck_all">Uncheck All</string>
    <string name="running">Running</string>
    <string name="fake_push">Fake</string>
</resources>
