<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_top"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/btn_annotate"
            android:text="@string/annotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_all_service"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_notification_listener_service"
            android:textOn ="@string/enabled"
            android:textOff ="@string/disabled"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_bottom"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_apps"
            android:layout_centerHorizontal="true"
            android:text="@string/apps" />
        <TextView
            android:id="@+id/txt_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:layout_below="@id/btn_apps"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_services"
        android:layout_below="@id/layout_top"
        android:layout_above="@id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
</RelativeLayout>
