<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_apps_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_apps_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_apps_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_apps_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_apps_check_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_all" />

        <Button
            android:id="@+id/btn_apps_uncheck_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncheck_all" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_apps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_apps_buttons"
        android:layout_below="@id/layout_apps_top"></ListView>
</RelativeLayout>